--- a/myinterests.html
+++ b/myinterests.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title>My Interests :)</title>    
+        <title>My Interests :)</title> 
+        <link rel="stylesheet" type="text/css" href="./style1.css"/>  
     </head>
     <body>
         <div>
@@ -12,6 +13,77 @@
             <p>Playing Keyboard</p>
             <p>Playing on ps4</p>
             <p>Riding a "Superbike"</p>            
+        </div>
+        <b>A Bold Way to Type</b>
+        <br/>
+        <br/>
+        <em>Not A <b>Bold</b> Way!!!!!</em>
+        <br/>
+        <div>
+            <img src="g_img.png" width="30%" height="30%" alt="an image"/>
+        </div>
+        <br/>
+        <div id="ordered list">
+            <ol>
+                <li>a</li>
+                <li>b</li>
+                <li>ba</li>
+                <li>asda</li>
+                <li>fdg</li>
+                <li>ggg</li>            
+            </ol>        
+        </div>
+        <table>
+<tr> <th> AAA </th>
+<td> EEE </td> </tr>
+<tr> <th> OOO </th>
+<td> III </td> </tr>
+</table>
+        <br/>
+        <div id="unordered list">
+            <ul>
+                <li>a</li>
+                <li>b</li>
+                <li>ba</li>
+                <li>asda</li>
+                <li>fdg</li>
+                <li>ggg</li>            
+            </ul>        
+        </div>
+        <div id="My-Table">
+            <table>
+                <tr>
+                    <th>
+                        roll number                    
+                    </th>    
+                    <th>
+                        name                
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        12                    
+                    </td>
+                    <td>
+                        <ul>
+                            <li>a</li>
+                            <li>b</li>
+                            <li>ba</li>
+                            <li>asda</li>
+                            <li>fdg</li>
+                            <li>ggg</li>            
+                        </ul> 
+                    </td>                
+                </tr>
+                <tr>
+                    <td>
+                        69                    
+                    </td> 
+                    <td>
+                        <img src="./b1.jpeg" width="50px" height="50px" alt="image of a bulb"/>                    
+                    </td>               
+                </tr>           
+            </table>        
         </div>
     </body>
 </html>
