--- a/javascript/test.html
+++ b/javascript/test.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="test.css" />
   </head>
 
-  <body onload="first();" >
-    <div class="container texx-center">
+  <body onload="start();" >
+    <div class="container text-center">
       <div class="row">
         <div class="col-lg-4">
         </div>
